# Indian-Stock-Prediction-System

./: README.md  docker-compose.yml  lstm_visual_model.h5  pyproject.toml  scaler.pkl  training_data.csv  visual_scaler.pkl
dashboard/: app.py
src/: database.py  ingest_news.py  ingest_stocks.py  main.py  process_sentiment.py  process_technicals.py  train_model.py  train_visual_model.py
