[project]
name = "algo-trading-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Kushagra Singh Kushwah",email = "kushagrasinghkushwah46@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "yfinance (>=1.0,<2.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
