[tool.poetry]
name = "algo-trading-system"
version = "1.0.0"
description = "Indian Stock Prediction System with XGBoost, FinBERT and LSTM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"

# --- CORE ---
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
pandas = "^2.1"

# --- DATA INGESTION ---
yfinance = "^0.2.30"
feedparser = "^6.0"

# --- ANALYSIS & MATH ---
# FIXED: Added 'allow-prereleases' to fix the version error
pandas-ta = {version = ">=0.3.14b0", allow-prereleases = true}
vadersentiment = "^3.3"
textblob = "^0.17"
scikit-learn = "^1.3"
joblib = "^1.3"

# --- MACHINE LEARNING (LOGIC) ---
xgboost = "^2.0"
optuna = "^3.4"

# --- DEEP LEARNING (SENTIMENT & VISUALS) ---
torch = "^2.1"
transformers = "^4.35"
tensorflow = "^2.15"

# --- WEB & DASHBOARD ---
fastapi = "^0.104"
uvicorn = "^0.24"
streamlit = "^1.28"
plotly = "^5.18"
tf-keras = "^2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"